Updated controller definitions Added status code attributes Code cleanup nswag configuration changes
