# src/XTMF2.Web.Server/Profiles/ModelSystemProfile.cs
@@ -1,0 +1,12 @@
+using AutoMapper;
+using XTMF2.Web.Data.Models;
+
+namespace XTMF2.Web.Server.Profiles {
+
+    public class ModelSystemProfile : Profile {
+
+        public ModelSystemProfile () {
+            CreateMap<ModelSystemHeader, ModelSystemModel> ();
+        }
+    }
+}
